[package]
name = "hopr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
dunce = "1.0.5"
fastrand = "2.3.0"
heapless = "0.9.2"
postcard = { version = "1.1.3", features = ["alloc"]  }
serde = { version = "1.0.228", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
which = "7.0.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", default-features = false, features = [
    "fs",
    "user",
] }

